# php-ffi-examples

./: LICENSE.md  README.md
101-hello-world/: README.md  hello-world.php
102-hello-world-with-load/: README.md  header.h  hello-world.php
103-hello-world-with-trycatch/: README.md  hello-world.php
201-rusty-hello-world/: Cargo.toml  build.rs  hello.php
201-rusty-hello-world/src/: lib.rs
